Fix menu button on iOS

--- a/assets/_sass/_minima.scss
+++ b/assets/_sass/_minima.scss
@@ -320,6 +320,7 @@ pre {
     height: 56px - 9px - 9px;
 
     .menu-icon {
+      cursor: pointer;
       display: block;
       float: right;
       width: 36px;
